kubernetes/traefik/dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: traefik
      sectionName: websecure
  hostnames:
    - traefik.home.lobotechworks.pt
  rules:
    # The dashboard requires the trailing slash
    - matches:
        - path:
            type: Exact
            value: /dashboard
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /dashboard/
            statusCode: 301
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
      backendRefs:
        - group: traefik.io
          kind: TraefikService
          name: api@internal
          namespace: traefik
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - group: traefik.io
          kind: TraefikService
          name: api@internal
          namespace: traefik
          port: 80
          weight: 1
